--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "rebass": "^4.0.7",
+    "serve": "^11.3.0",
     "theme-ui": "^0.2.52"
   },
   "scripts": {
