--- a/my-app/package.json
+++ b/my-app/package.json
@@ -25,7 +25,8 @@
     "theme-ui": "^0.2.52"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
+    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
