--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
