--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "theme-ui": "^0.2.52"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
