--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
     "serve": "^11.3.0",
     "theme-ui": "^0.2.52"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.0.2",
+    "nodemon": "^2.0.2"
+  },
   "scripts": {
-    "start": "node index.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start:dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "npm run build",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install"
+
   },
   "keywords": [],
   "author": "",
