--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node index.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\"npm run server\" \"npm run client\"",
     "server": "nodemon index.js",
-    "client": "npm run start --prefix client",
-    "start:dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "npm run build",
+    "client": "cd client && npm run start",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install"
-
+    "install": "cd client && npm install",
+    "heroku-postbuild": "npm run build",
   },
   "keywords": [],
   "author": "",
