--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "client": "cd client && npm run start",
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
