--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node index.js",
-    "start:dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "server": "nodemon index.js",
     "client": "cd client && npm run start",
-    "build": "cd client && npm run build",
     "install": "cd client && npm install",
+    "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
