--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.0.2",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
