--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^5.0.2",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
