--- a/client/package.json
+++ b/client/package.json
@@ -2,19 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
-  },
+  "proxy": "http://localhost:5000/",
+ 
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@mdx-js/react": "^1.5.5",
     "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
     "emotion-theming": "^10.0.27",
