--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^5.0.2",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
@@ -33,9 +34,8 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node index.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\" \"npm run serve\"",
     "server": "nodemon index.js",
-    "deploy": "serve -s build",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
