--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:5000/",
+  "private": false,
  
   "dependencies": {
     "@emotion/core": "^10.0.27",
