--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "version": "0.1.0",
- 
+  "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@mdx-js/react": "^1.5.5",
